src/objects/Engagement_Plan_Template__c.object
<CustomObject>
    <fields>
        <fullName>Automatically_Update_Child_Task_Due_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recalculates a child Task&apos;s due date based on when the parent Task was actually completed.</description>
        <inlineHelpText>Recalculates a child Task&apos;s due date based on when the parent Task was actually completed.</inlineHelpText>
        <label>Automatically Update Child Task Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Assignee__c</fullName>
        <description>When an Engagement Plan Task&apos;s Assigned To field is left blank, who should the Task be assigned to?</description>
        <inlineHelpText>When an Engagement Plan Task&apos;s Assigned To field is left blank, who should the Task be assigned to?</inlineHelpText>
        <label>Default Assignee</label>
        <picklist>
            <picklistValues>
                <fullName>Owner of Object for Engagement Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Creating Engagement Plan</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reschedule_To__c</fullName>
        <description>Should Tasks with Due Dates on a weekend day be scheduled for the Friday before the weekend or the Monday after? This applies only if Skip Weekend is selected.</description>
        <inlineHelpText>Should Tasks with Due Dates on a weekend day be scheduled for the Friday before the weekend or the Monday after? This applies only if Skip Weekend is selected.</inlineHelpText>
        <label>Reschedule To</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skip_Weekends__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, Tasks created in this Engagement Plan will not have Due Dates that fall on Saturday or Sunday.</description>
        <inlineHelpText>If selected, Tasks created in this Engagement Plan will not have Due Dates that fall on Saturday or Sunday.</inlineHelpText>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Engagement_Plans__c</fullName>
        <label>Total Engagement Plans</label>
        <summaryForeignKey>Engagement_Plan__c.Engagement_Plan_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <summaryForeignKey>Engagement_Plan_Task__c.Engagement_Plan_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Engagement Plan Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Engagement Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>